--- a/NEAL/neal_main/templates/neal_main/segments.html
+++ b/NEAL/neal_main/templates/neal_main/segments.html
@@ -25,12 +25,14 @@
 </div>
 <div id="topmiddle" style="float: left; margin-top: 20px; margin-left: 30px;">
 <font color = "#cccccc">
-    <h3 style="width: 40px;">
+    <center>
+	<h3 style="width: 40px;">
 
          Statistics:
 
     </h3>
-    <table style="font-size: 0.8em; margin-left: 20px; line-height: 1.4;">
+    </center>
+	<table style="font-size: 0.8em; margin-left: 20px; line-height: 1.4;">
         <tbody>
             <tr>
                 <td style="text-align:right">
@@ -48,19 +50,21 @@
             <tr>
                 <td style="text-align:right">
 
-                Segmentations: 1, 93, 000
+                &nbsp;&nbsp;&nbsp;Segmentations: 1, 93, 000
 
                 </td>
                 <td style="text-align:right">
 
                 &nbsp;&nbsp;&nbsp;Audio Relationships: to be mapped
 
-  </td>
+
+                </td>
             </tr>
         </tbody>
     </table>
 </font>
 </div>
+
 <div id="topright">
 <font color = "#cccccc">
 <input id="category" value="Search Here"></input>
